--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/NTag/blog-digital-nomad#readme",
   "dependencies": {
+    "all-the-cities": "^3.1.0",
+    "fast-levenshtein": "^3.0.0",
     "zx": "^7.1.1"
   }
 }
